==> xiaoxiang781216/incubator-nuttx/arch/arm/src/lpc2378/lpc23xx_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/mutex.h>
#include <nuttx/spi/spi.h>
#include "arm_internal.h"
#include "chip.h"
#include "lpc23xx_pinsel.h"
#include "lpc23xx_scb.h"
#include "lpc23xx_spi.h"
#define SPI_PCLKSET_DIV    SYSCON_PCLKSEL_CCLK
#define SPI_CLOCK          CCLK

static uint32_t spi_setfrequency(struct spi_dev_s *dev,
                                 uint32_t frequency)
{
  struct lpc23xx_spidev_s *priv = (struct lpc23xx_spidev_s *)dev;
  uint32_t divisor;
  uint32_t actual;

  DEBUGASSERT(frequency <= SPI_CLOCK / 2);

  /* Check if the requested frequency is the same as the frequency
   * selection.
   */

  DEBUGASSERT(priv != NULL);
  if (priv->frequency == frequency)
    {
      /* We are already at this frequency.  Return the actual. */

      return priv->actual;
    }

  /* frequency = SPI_CLOCK / divisor, or divisor = SPI_CLOCK / frequency */

  divisor = SPI_CLOCK / frequency;

  /* The SPI CCR register must contain an even number greater than or equal
   * to 8.
   */

  if (divisor < 8)
    {
      divisor = 8;
    }
  else if (divisor > 254)
    {
      divisor = 254;
    }

  divisor = (divisor + 1) & ~1;

  /* Save the new divisor value */

  putreg32(divisor, SPI_CCR);

  /* Calculate the new actual */

  actual = SPI_CLOCK / divisor;

  /* Save the frequency setting */

  priv->frequency = frequency;
  priv->actual    = actual;

  spiinfo("Frequency %d->%d\n", frequency, actual);
  return actual;
}

static void spi_setmode(struct spi_dev_s *dev, enum spi_mode_e mode)
{
  struct lpc23xx_spidev_s *priv = (struct lpc23xx_spidev_s *)dev;
  uint32_t regval;

  /* Has the mode changed? */

  DEBUGASSERT(priv != NULL);
  if (mode != priv->mode)
    {
      /* Yes... Set CR appropriately */

      regval = getreg32(SPI_CR);
      regval &= ~(SPI_CR_CPOL | SPI_CR_CPHA);

      switch (mode)
        {
          case SPIDEV_MODE0: /* CPOL=0; CPHA=0 */
            break;

          case SPIDEV_MODE1: /* CPOL=0; CPHA=1 */
            regval |= SPI_CR_CPHA;
            break;

          case SPIDEV_MODE2: /* CPOL=1; CPHA=0 */
            regval |= SPI_CR_CPOL;
            break;

          case SPIDEV_MODE3: /* CPOL=1; CPHA=1 */
            regval |= (SPI_CR_CPOL | SPI_CR_CPHA);
            break;

          default:
            DEBUGASSERT(FALSE);
            return;
        }

      putreg32(regval, SPI_CR);

      /* Save the mode so that subsequent re-configurations will be faster */

      priv->mode = mode;
    }
}

static void spi_setbits(struct spi_dev_s *dev, int nbits)
{
  struct lpc23xx_spidev_s *priv = (struct lpc23xx_spidev_s *)dev;
  uint32_t regval;

  DEBUGASSERT(nbits > 7 && nbits < 17);

  /* Has the number of bits changed? */

  DEBUGASSERT(priv != NULL);
  if (nbits != priv->nbits)
    {
      /* Yes... Set CR appropriately */

      regval  = getreg32(SPI_CR);
      regval &= ~SPI_CR_BITS_MASK;
      regval |= (nbits << SPI_CR_BITS_SHIFT) & SPI_CR_BITS_MASK;
      regval |= SPI_CR_BITENABLE;
      putreg32(regval, SPI_CR);

      /* Save the selection so that subsequent re-configurations will be
       * faster.
       */

      priv->nbits = nbits;
    }
}

static uint32_t spi_send(struct spi_dev_s *dev, uint32_t wd)
{
  /* Write the data to transmitted to the SPI Data Register */

  putreg32(wd, SPI_DR);

  /* Wait for the SPIF bit in the SPI Status Register to be set to 1. The
   * SPIF bit will be set after the last sampling clock edge of the SPI
   * data transfer.
   */

  while ((getreg32(SPI_SR) & SPI_SR_SPIF) == 0);

  /* Read the SPI Status Register again to clear the status bit */

  getreg32(SPI_SR);
  return getreg32(SPI_DR);
}

struct spi_dev_s *lpc23_spibus_initialize(int port)
{
  struct lpc23xx_spidev_s *priv = &g_spidev;
  irqstate_t flags;
  uint32_t regval;

  /* Configure multiplexed pins as connected on the board.  Chip select
   * pins must be configured by board-specific logic.  All SPI pins and
   * one SPI1 pin (SCK) have multiple, alternative pin selection.
   * Definitions in the board.h file must be provided to resolve the
   * board-specific pin configuration like:
   *
   * #define GPIO_SPI_SCK GPIO_SPI_SCK_1
   */

  flags = enter_critical_section();

  regval  = getreg32(LPC23XX_SCB_BASE + SCB_PCONP_OFFSET);
  regval |= PCSPI;
  putreg32(regval, LPC23XX_SCB_BASE + SCB_PCONP_OFFSET);

  regval  = getreg32(LPC23XX_SCB_BASE + SCB_PCLKSEL0_OFFSET);
  regval &= ~SPI_PCLKSEL_MASK;
  regval |= SPI_PCLKSEL;
  putreg32(regval, LPC23XX_SCB_BASE + SCB_PCLKSEL0_OFFSET);

  regval  = getreg32(LPC23XX_PINSEL0);
  regval &= ~SPI_PINSEL0_MASK ;
  regval |= SPI_PINSEL0;
  putreg32(regval, LPC23XX_PINSEL0);

  regval  = getreg32(LPC23XX_PINSEL1);
  regval &= ~SPI_PINSEL1_MASK ;
  regval |= SPI_PINSEL1;
  putreg32(regval, LPC23XX_PINSEL1);

  leave_critical_section(flags);

  /* Configure 8-bit SPI mode and master mode */

  putreg32(SPI_CR_BITS_8BITS | SPI_CR_BITENABLE | SPI_CR_MSTR, SPI_CR);

  /* Set the initial SPI configuration */

  priv->frequency = 0;
  priv->nbits     = 8;
  priv->mode      = SPIDEV_MODE0;

  /* Select a default frequency of approx. 400KHz */

  spi_setfrequency((struct spi_dev_s *)priv, 400000);

  /* Initialize the SPI mutex that enforces mutually exclusive access */

  nxmutex_init(&priv->excllock);
  return &priv->spidev;
}
